SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Details</relationshipLabel>
        <relationshipName>Case_Details</relationshipName>
        <type>Lookup</type>
    </CustomField>