SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Case_Invoice_Status__c.field-meta.xml
<CustomField>
        <fullName>Case_Invoice_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case - Invoice Status</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Invoice Status Details</relationshipLabel>
        <relationshipName>Invoice_Status_Details</relationshipName>
        <type>Lookup</type>
    </CustomField>