SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Case_Remittance_Detail__c.field-meta.xml
<CustomField>
        <fullName>Case_Remittance_Detail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case - Remittance Detail</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Remittance Details</relationshipLabel>
        <relationshipName>Remittance_Details</relationshipName>
        <type>Lookup</type>
    </CustomField>