SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Comments__c.field-meta.xml
<CustomField>
        <fullName>Comments__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>