SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </CustomField>