SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>