SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </CustomField>