SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>