SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>