SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Vendor__c.field-meta.xml
<CustomField>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountType__c</field>
                <operation>equals</operation>
                <value>Vendor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Details</relationshipLabel>
        <relationshipName>Case_Details</relationshipName>
        <type>Lookup</type>
    </CustomField>