SFUSA/force-app/main/default/objects/Case_Detail__c/fields/Vendor_Number__c.field-meta.xml
<CustomField>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>