SFUSA/force-app/main/default/objects/Case_Detail__c/recordTypes/Remittance_Details.recordType-meta.xml
<RecordType>
        <fullName>Remittance_Details</fullName>
        <active>true</active>
        <label>Remittance Details</label>
    </RecordType>